# dos

./: .clang-format  .nvim.lua  Cargo.toml  Makefile  README.md  boot.asm  boot.s  grub.cfg  kernel.c  print.asm  shell.nix  toolchain.toml
.cargo/: config.toml
src/: boot.s  gdt.rs  interrupts.rs  kernel.c  kstdio.c  kstdio.h  kstring.h  lib.rs  main.rs  memory.rs  pic.rs  port.rs  print_vga.c  print_vga.h  serial.c  serial.h  serial.rs  stdio.c  stdio.h  string.h  vga_buffer.rs  volatile.rs
tests/: basic_boot.rs  greatest.h  host_stubs.c  host_stubs.h  should_panic.rs  stack_overflow.rs  test_stdio.c
