[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os"
test = false
bench = false

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none",
]
run-args = ["-serial", "stdio"]
test-success-exit-code = 33
test-timeout = 300 #seconds
